add endpoint /current/query/map-original
